fix pagination overflow

--- a/src/scss/components/_marketplace.scss
+++ b/src/scss/components/_marketplace.scss
@@ -1,5 +1,5 @@
 .marketplace {
-  height: calc(100vh - 90px);
+  height: calc(100vh - 80px);
   background-repeat: no-repeat;
   background-size: cover;
   font-family: 'DM Sans', system-ui, sans-serif;
@@ -8,7 +8,6 @@
 
   &__content {
     width: 100%;
-    height: 100%;
   }
 
   &__title-box {
