--- a/src/scss/layouts/_footer-marketplace.scss
+++ b/src/scss/layouts/_footer-marketplace.scss
@@ -2,6 +2,7 @@
   background-color: $primary-white;
   color: $primary-text-2;
   width: 100%;
+  margin-top: 4rem;
 
   &__content {
     padding: 0 1rem;
